# fruity

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: FUNDING.yml
src/: lib.rs  mem.rs
src/_priv/: mod.rs
src/_priv/cf_string/: mod.rs  utf16.rs
src/app_kit/: mod.rs  version.rs
src/appkit/: mod.rs
src/cf_network/: mod.rs
src/common/: mod.rs  ns_directional_insets.rs
src/core/: arc.rs  four_char_code.rs  macros.rs  mod.rs  object_type.rs  os_err.rs  os_status.rs  os_type.rs
src/core_animation/: mod.rs
src/core_audio/: mod.rs
src/core_foundation/: bridge.rs  cf_boolean.rs  cf_type.rs  cmp.rs  mod.rs  sys.rs
src/core_foundation/cf_allocator/: callbacks.rs  context.rs  mod.rs
src/core_foundation/cf_number/: mod.rs  type_.rs
src/core_graphics/: mod.rs
src/core_graphics/geometry/: cg_affine_transform.rs  cg_float.rs  cg_point.rs  cg_rect.rs  cg_size.rs  cg_vector.rs  cgfloat.rs  cgpoint.rs  cgrect.rs  cgsize.rs  mod.rs
src/core_image/: mod.rs
src/core_services/: mod.rs  sys.rs
src/core_services/apple_events/: data_storage.rs  event_class.rs  event_id.rs  mod.rs  return_id.rs  send_mode.rs  transaction_id.rs
src/core_services/apple_events/desc/: mod.rs  type_.rs
src/core_text/: mod.rs
src/core_video/: mod.rs
src/dispatch/: autorelease_frequency.rs  mod.rs  object.rs  qos.rs  sys.rs  time.rs
src/dispatch/queue/: attr.rs  builder.rs  mod.rs  priority.rs
src/dispatch/source/: mod.rs  type_.rs
src/foundation/: cmp.rs  error_codes.rs  geometry.rs  mod.rs  ns_exception.rs  ns_null.rs  ns_number.rs  ns_range.rs  ns_value.rs  nsnumber.rs  nsstring.rs  nsvalue.rs
src/foundation/ns_array/: macros.rs  mod.rs
src/foundation/ns_error/: domain.rs  mod.rs  recovery_attempting.rs  user_info_key.rs
src/foundation/ns_exception/: mod.rs  name.rs
src/foundation/ns_string/: encoding.rs  macros.rs  mod.rs
src/foundation/nsstring/: macros.rs  mod.rs
src/io_kit/: mod.rs  sys.rs
src/objc/: autoreleasepool.rs  bool.rs  class.rs  class_type.rs  image_info.rs  int.rs  ivar.rs  macros.rs  macros_pub.rs  method_description.rs  mod.rs  ns_object.rs  nsobject.rs  obj.rs  objc_object.rs  object_type.rs  sys.rs  type_encoding.rs  unretained.rs
src/objc/method/: description.rs  mod.rs
src/objc/msg/: get_fn.rs  mod.rs
src/objc/property/: attribute.rs  mod.rs
src/objc/sel/: atomic.rs  cached.rs  global.rs  macros.rs  mod.rs
src/system_configuration/: mod.rs
src/ui_kit/: mod.rs
src/ui_kit/ext/: mod.rs  ns_value.rs  nsvalue.rs
src/uikit/: mod.rs  nsvalue.rs
