[package]
name = "fruity"
version = "0.2.0"
authors = ["Nikolai Vazquez <hello@nikolaivazquez.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rusty bindings for Apple libraries"
repository = "https://github.com/nvzqz/fruity"
homepage = "https://github.com/nvzqz/fruity"
documentation = "https://docs.rs/fruity"
categories = ["api-bindings", "development-tools::ffi", "os"]
keywords = ["apple", "cocoa", "objc", "foundation", "uikit"]
include = [
    # Manifest
    "Cargo.toml",

    # Source files
    "src",
    "tests",
    "examples",

    # Documents
    "README*",
    "CHANGELOG*",
    "LICENSE*",
]

[features]
# Libraries and frameworks
appkit = ["foundation"]
objc = []
core_foundation = []
core_graphics = []
foundation = ["objc", "core_graphics"]
uikit = ["foundation"]

[dev-dependencies]
rand = "0.7.3"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
all-features = true
