[package]
name = "fruity"
version = "0.2.0"
authors = ["Nikolai Vazquez <hello@nikolaivazquez.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rusty bindings for Apple libraries"
repository = "https://github.com/nvzqz/fruity"
homepage = "https://github.com/nvzqz/fruity"
documentation = "https://docs.rs/fruity"
categories = ["api-bindings", "development-tools::ffi", "os"]
keywords = ["apple", "cocoa", "objc", "foundation", "uikit"]
include = [
    # Manifest
    "Cargo.toml",

    # Source files
    "src",
    "tests",
    "examples",

    # Documents
    "README*",
    "CHANGELOG*",
    "LICENSE*",
]

[features]
default = ["malloced"]

# Libraries and frameworks
app_kit = ["foundation"]
objc = []
core_foundation = ["objc"]
core_graphics = []
core_animation = ["foundation"]
dispatch = []
foundation = ["objc", "core_graphics"]
ui_kit = ["foundation"]

[dependencies]
malloced = { version = "1", optional = true }

[dev-dependencies]
rand = "0.7.3"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
all-features = true
